--- a/frontend/src/components/Input.css
+++ b/frontend/src/components/Input.css
@@ -1,23 +1,18 @@
 .Input article input {
+  background-color: transparent;
+  border: none;
+  width: 100%;
+  font-size: 14px;
+  outline: none;
+}
+
+.Input article {
+  display: flex;
+  align-items: center;
   width: 100%;
   background-color: var(--color-card__background);
   border: none;
   border-radius: 8px;
-  font-size: 14px;
   height: 48px;
-  padding-left: 1rem;
-}
-
-.Input article {
-  position: relative;
-}
-
-.Input article svg {
-  position: absolute;
-  right: 16px;
-  top: 0;
-  bottom: 0;
-  margin: auto 0;
-  width: 32px;
-  height: 32px;
+  padding: 0 1rem;
 }
