feat(LoginForm) animate Carousel
- Finished animation of carousel
- fix dispay cursor on CTA
- fix display cursor on checkbox

--- a/frontend/src/components/Button.css
+++ b/frontend/src/components/Button.css
@@ -11,4 +11,9 @@
     var(--color-primary) -4%,
     var(--color-primary--gradient) 128%
   );
+  cursor: pointer;
+}
+
+.CTA:active {
+  transform: scale(0.98);
 }
