--- a/frontend/src/components/Login/LoginCarousel.css
+++ b/frontend/src/components/Login/LoginCarousel.css
@@ -68,3 +68,9 @@
 .sliderSelected {
   width: 36px;
 }
+
+@media only screen and (max-width: 1100px) {
+  .loginCarousel {
+    display: none;
+  }
+}
